[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://vr_offices/ui/DeskOverlay.gd" id="1"]

[node name="DeskOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1")

[node name="ContextMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
size = Vector2i(220, 90)

[node name="DevicePopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 0.0
offset_top = 0.0
offset_right = 520.0
offset_bottom = 200.0
size = Vector2i(520, 200)

[node name="Panel" type="Panel" parent="%DevicePopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="%DevicePopup/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="Title" type="Label" parent="%DevicePopup/Panel/VBox"]
layout_mode = 2
text = "Bind device code"

[node name="Hint" type="Label" parent="%DevicePopup/Panel/VBox"]
layout_mode = 2
text = "Paste the device code from the remote daemon. (Separators like '-' are allowed.)"

[node name="CodeEdit" type="LineEdit" parent="%DevicePopup/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Device code"

[node name="Buttons" type="HBoxContainer" parent="%DevicePopup/Panel/VBox"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="%DevicePopup/Panel/VBox/Buttons"]
layout_mode = 2
focus_mode = 0
text = "Cancel"

[node name="OkButton" type="Button" parent="%DevicePopup/Panel/VBox/Buttons"]
layout_mode = 2
focus_mode = 0
text = "Bind"

[node name="Toast" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 12
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 12.0
offset_top = 12.0
offset_right = 520.0
offset_bottom = 42.0
text = ""

